--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --disable-host-check --proxy-config proxy.conf.json",
     "start:ssl": "ng serve --host 0.0.0.0 --disable-host-check --proxy-config proxy.conf.json --ssl",
-    "build": "ng build && nodemon ./bin/www.js",
+    "build": "ng build --watch && nodemon ./bin/www.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
